# matsuzawa-20260215-2

./: Dockerfile  package-lock.json  pyproject.toml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-llama8b-gsm8k/: metrics.json
.research/results/comparative-2-llama8b-svamp/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-llama8b-gsm8k/: metrics.json
.research/results/proposed-llama8b-svamp/: metrics.json
config/: config.yaml
config/run/: comparative-1-llama8b-gsm8k.yaml  comparative-2-llama8b-svamp.yaml  proposed-llama8b-gsm8k.yaml  proposed-llama8b-svamp.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
