[project]
name = "cpv-cot"
version = "0.1.0"
description = "CPV-CoT: Cross-Perspective Verification Chain-of-Thought"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: Build failed with "ModuleNotFoundError: No module named 'setuptools.build_backend'"
# [CAUSE]: UV package manager couldn't find setuptools.build_backend module during build
# [FIX]: Switched to hatchling build backend which is better supported by UV and modern Python packaging
#
# [OLD CODE]:
# [build-system]
# requires = ["setuptools>=45", "wheel"]
# build-backend = "setuptools.build_backend"
#
# [NEW CODE]:
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 2]
# [PROBLEM]: Build failed with "ValueError: Unable to determine which files to ship inside the wheel"
# [CAUSE]: Hatchling couldn't find a directory matching the project name "cpv_cot" (underscore version of "cpv-cot")
# [FIX]: Added explicit hatch build configuration to tell hatchling that the package files are in "src/" directory
#
# [OLD CODE]:
# (no hatch configuration section)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]